--- a/src/app/@BackStage/leave/leave.scss
+++ b/src/app/@BackStage/leave/leave.scss
@@ -1,29 +1,68 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box !important;
+}
+.wrapper {
+  padding: 24px;
+}
 .leave-info-container {
   display: flex;
   flex-direction: column;
+
+  position: relative;
 }
 
 .leave-info-header {
   display: flex;
   justify-content: flex-end; /* 靠右 */
   margin-bottom: 10px;
+
+  position: absolute;
+  right: 0;
+}
+
+// :host ::ng-deep .mdc-button__label {
+//   color: #fff !important;
+// }
+:host ::ng-deep .mat-focus-indicator .btn-bg-secondary {
+  border: 2px solid #fff;
+  border-radius: 1000px;
+  background-color: #7a6b5a !important;
+
+}
+
+:host ::ng-deep .btn-bg-secondary {
+  background: #8eb69b !important;
+  border: 2px solid #fff;
 }
 
 .leave-info-body {
-  padding: 10px;
+  // padding: 10px;
 }
-
 
 .header-bar {
   display: flex;
   justify-content: space-between; /* 左右分佈 */
   align-items: center;
   margin-bottom: 20px;
+  transition: 0.3s !important;
+  button {
+    transition: 0.3s;
+    height: 40px;
+    background: #e8928a !important;
+    border: 2px solid #fff;
+    color: #fff;
+  }
 }
 
 .title {
-  color: #3f51b5; /* 深藍色 */
-  margin-bottom: 20px;
+  margin: 0;
+  color: #fff;
+  font-weight: 600;
+  background-color: #235347;
+  padding: 12px 8px;
+  border-radius: 8px;
 }
 
 /* Table 外框 */
@@ -31,16 +70,28 @@
   overflow: auto;
   border-radius: 10px;
   border: 1px solid #cfd8dc;
-  padding: 15px;
+  // padding: 15px;
   background-color: #f0f4ff;
+
+  * {
+    text-align: center;
+  }
+  th {
+    border-bottom: 1px solid #ddd !important;
+  }
+  td {
+    border-bottom: 1px solid #ddd !important;
+  }
 }
 
 /* 表頭 */
 .custom-table th.mat-header-cell {
-  background-color: #3f51b5; /* 藍色表頭 */
-  color: white;
+  margin: 0;
+  color: #fff;
   font-weight: 600;
-  text-align: center;
+  background-color: #235347;
+  padding: 12px 8px;
+  border-radius: 8px;
 }
 
 /* 表格內容 */
@@ -51,7 +102,7 @@
 
 /* 行 hover 效果 */
 .data-row:hover {
-  background-color: #dbeafe; /* 淡藍色 */
+  // background-color: #dbeafe; /* 淡藍色 */
 }
 
 /* 分頁器調整 */
@@ -60,8 +111,12 @@
   color: #1e3a8a;
 }
 
-.applyDateBtn{
-  color:#3f51b5
+.applyDateBtn {
+  color: #3f51b5;
+  cursor: pointer;
+}
+.mat-mdc-paginator {
+  background-color: #8eb69bc6 !important;
 }
 
-
+//
