--- a/src/app/@Dialog/@Employee/add-employee/add-employee.html
+++ b/src/app/@Dialog/@Employee/add-employee/add-employee.html
@@ -31,7 +31,8 @@
       <mat-label>職位</mat-label>
       <mat-select [(ngModel)]="addEmployeeList.title" name="state">
         <mat-option value="主管">主管</mat-option>
-        <mat-option value="正職員工">正職員工</mat-option>
+        <mat-option value="正職人員">正職人員</mat-option>
+        <mat-option value="計時人員">計時人員</mat-option>
       </mat-select>
     </mat-form-field>
 
