--- a/src/app/@Dialog/@Leave/view-leave-info/view-leave-info.component.scss
+++ b/src/app/@Dialog/@Leave/view-leave-info/view-leave-info.component.scss
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box !important;
+}
+
 /* === Header 樣式 === */
 .header {
   display: flex;
@@ -43,6 +49,7 @@
   color: #333;
   font-weight: 600;
   text-align: center;
+  border-bottom: 1px solid #ddd !important;
 }
 
 .leave-table td {
@@ -72,7 +79,8 @@
 }
 
 /* === 同意 / 不同意 標籤 === */
-.approved-label, .denied-label {
+.approved-label,
+.denied-label {
   display: inline-block;
   color: white;
   padding: 4px 8px;
@@ -84,12 +92,81 @@
 
 /* 同意 */
 .approved-label {
-  background-color: #4caf50; /* 綠色 */
+  background-color: #6ea77c; /* 綠色 */
   box-shadow: 0 2px 4px rgba(76, 175, 80, 0.3);
 }
 
 /* 不同意 */
 .denied-label {
-  background-color: #f44336; /* 紅色 */
+  background-color: #dd6565; /* 紅色 */
   box-shadow: 0 2px 4px rgba(244, 67, 54, 0.3);
+}
+.table-container {
+  overflow: hidden !important;
+  border-radius: 10px !important;
+  th {
+    border-bottom: 1px solid #ddd !important;
+  }
+}
+.mat-mdc-paginator {
+  background-color: #8eb69bc6 !important;
+}
+
+.toolbar {
+  max-width: 280px;
+  margin: 0 auto;
+}
+.toolbar-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.toolbar-center {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+.toolbar-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-icon {
+  font-size: 26px;
+  color: #2f3e46 !important;
+  cursor: #9a5370;
+  display: inline-grid;
+  place-items: center;
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 8px;
+  transition: 0.3s;
+  cursor: pointer;
+  border: 2px solid #fff;
+
+  background-color: #7eb1a2c4;
+
+  box-shadow: 5px 5px 10px rgba(110, 110, 110, 0.295);
+}
+.nav-icon:hover {
+  transform: translateY(-3px);
+  background: rgba(232, 180, 200, 0.12);
+  color: #9a5370;
+  transition: 0.3s;
+}
+.month-label {
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--indigo);
+  margin: 0 12px;
+  letter-spacing: 1px;
+  padding: 6px 12px;
+  border-radius: 999px;
+  background: #8eb69b;
+  color: #fff;
+  border: 1px solid rgba(47, 62, 70, 0.03);
+  box-shadow: 0 6px 14px rgba(47, 62, 70, 0.02);
 }
