--- a/src/app/@Dialog/@Shift/add-shift-work/add-shift-work.html
+++ b/src/app/@Dialog/@Shift/add-shift-work/add-shift-work.html
@@ -7,21 +7,33 @@
       <label>員工</label>
       <select [(ngModel)]="update.employeeId" name="employee" required>
         @for(item of employeeList; track $index) {
-          <option [value]="item.id">{{ item.id }} - {{ item.name }}</option>
+        <option [value]="item.id">{{ item.id }} - {{ item.name }}</option>
         }
       </select>
     </div>
 
     <div class="form-group">
       <label>日期</label>
-      <input type="date" [(ngModel)]="update.applyDate" name="date" [min]="tomorrow" [disabled]="!update.employeeId">
+      <input
+        type="date"
+        [(ngModel)]="update.applyDate"
+        name="date"
+        [min]="tomorrow"
+        [disabled]="!update.employeeId"
+      />
     </div>
 
     <div class="form-group">
       <label>時段</label>
-      <select [(ngModel)]="update.shiftWorkId" name="time" required (change)="validShift()" [disabled]="!update.employeeId || !update.applyDate">
+      <select
+        [(ngModel)]="update.shiftWorkId"
+        name="time"
+        required
+        (change)="validShift()"
+        [disabled]="!update.employeeId || !update.applyDate"
+      >
         @for(item of timeList; track $index) {
-          <option [value]="$index + 1">{{ item }}</option>
+        <option [value]="$index + 1">{{ item }}</option>
         }
       </select>
     </div>
@@ -29,7 +41,7 @@
 
   <!-- 預覽表格 -->
   <div class="preview-list">
-    <h3>已新增的班表</h3>
+    <h3>已新增班表</h3>
     <div class="table-wrapper">
       <table>
         <thead>
@@ -42,14 +54,20 @@
         </thead>
         <tbody>
           @for (item of shiftList.preSchduleUpdateVo; track $index) {
-            <tr>
-              <td>{{ item.employeeId }}</td>
-              <td>{{ item.applyDate }}</td>
-              <td>{{ item.shiftWorkId }}</td>
-              <td>
-                <button type="button" class="btn-circle" (click)="removeShift($index)">−</button>
-              </td>
-            </tr>
+          <tr>
+            <td>{{ item.employeeId }}</td>
+            <td>{{ item.applyDate }}</td>
+            <td>{{ item.shiftWorkId }}</td>
+            <td>
+              <button
+                type="button"
+                class="btn-circle"
+                (click)="removeShift($index)"
+              >
+                −
+              </button>
+            </td>
+          </tr>
           }
         </tbody>
       </table>
