--- a/src/app/@Dialog/@ShiftTime/add-shift-time/add-shift-time.scss
+++ b/src/app/@Dialog/@ShiftTime/add-shift-time/add-shift-time.scss
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box !important;
+}
+
 .shift-form-blue {
   max-width: 420px;
   margin: 30px auto;
