--- a/src/app/@Dialog/success/success.html
+++ b/src/app/@Dialog/success/success.html
@@ -1,6 +1,28 @@
-<div class="success-container">
-    <!-- 播放影片 -->
-    <img src="Success.gif" alt="動畫示意" width="150">
-    <!-- 成功文字 -->
-    <p class="success-text">提交成功！</p>
-  </div>
+<div class="success-container" style="position: relative">
+  <img
+    src="success_plus_nbg.gif"
+    style="
+      display: inline-block;
+      display: flex;
+      justify-content: center;
+      width: 230px;
+      margin: 18px auto 0;
+    "
+    alt="動畫示意"
+  />
+  <!-- 成功文字 -->
+  <p
+    class="success-text"
+    style="
+      font-weight: 900;
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%);
+      bottom: 0;
+      color: #447f70;
+      font-size: 16px;
+    "
+  >
+    提交成功
+  </p>
+</div>
