--- a/src/app/reclockin/reclockin.component.html
+++ b/src/app/reclockin/reclockin.component.html
@@ -1,9 +1,13 @@
 <div class="reclockin-root">
 
   <div class="dialog-header">
+
+    <button class="makeup-solid-btn" (click)="openMakeupDialog()">補打卡申請</button>
+      
     <button mat-icon-button (click)="closeAndRefresh()">
       <mat-icon>cancel</mat-icon>
     </button>
+
   </div>
 
   <div class="attendance-container">
