--- a/src/app/waterdrop/waterdrop.component.scss
+++ b/src/app/waterdrop/waterdrop.component.scss
@@ -1,6 +1,6 @@
 :host {
   display: inline-block;
-  --level: 0;           /* 預設 0%，會被 [style.--level] 覆蓋 */
+  --level: 0;        
 }
 
 #logo { width: 250px; height: 150px; }
