--- a/src/app/@BackStage/leave/leave.html
+++ b/src/app/@BackStage/leave/leave.html
@@ -1,44 +1,63 @@
-@if(changeType){
+<div class="wrapper le">
+  @if(changeType){
   <div class="leave-info-container">
     <div class="leave-info-header">
-      <button mat-raised-button color="primary" (click)="showLeaveInfo()">返回</button>
+      <button
+
+        class="btn-bg-secondary"
+        mat-raised-button
+        color="primary"
+        (click)="showLeaveInfo()"
+        style="color: #fff;"
+      >
+        返回
+      </button>
     </div>
 
     <div class="leave-info-body">
       <app-view-leave-info></app-view-leave-info>
     </div>
   </div>
-}@else{
+  }@else{
   <div class="header-bar">
     <h2 class="title">請假管理</h2>
-
     <button mat-raised-button color="primary" (click)="showLeaveInfo()">
-      查看請假資訊
+      請假資訊
     </button>
   </div>
 
   <div class="table-container mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" class="custom-table">
-
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> 員工編號 </th>
-        <td mat-cell *matCellDef="let element"> {{element.employeeId}} </td>
+        <th mat-header-cell *matHeaderCellDef style="width: 16.66666666667%">
+          員工編號
+        </th>
+        <td mat-cell *matCellDef="let element">{{element.employeeId}}</td>
       </ng-container>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> 員工姓名 </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <th mat-header-cell *matHeaderCellDef style="width: 16.66666666667%">
+          員工姓名
+        </th>
+        <td mat-cell *matCellDef="let element">{{element.name}}</td>
       </ng-container>
 
       <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef> 請假類型 </th>
-        <td mat-cell *matCellDef="let element"> {{element.leaveType}} </td>
+        <th mat-header-cell *matHeaderCellDef style="width: 16.66666666667%">
+          請假類型
+        </th>
+        <td mat-cell *matCellDef="let element">{{element.leaveType}}</td>
       </ng-container>
 
       <ng-container matColumnDef="apply_date">
-        <th mat-header-cell *matHeaderCellDef> 申請日期 </th>
+        <th mat-header-cell *matHeaderCellDef style="width: 16.66666666667%">
+          申請日期
+        </th>
         <td mat-cell *matCellDef="let element">
-          <label class="applyDateBtn" (click)="showLeaveTime(element.leaveId,element.leaveProve)">
+          <label
+            class="applyDateBtn"
+            (click)="showLeaveTime(element.leaveId,element.leaveProve)"
+          >
             查看
           </label>
         </td>
@@ -47,24 +66,49 @@
       <ng-container matColumnDef="approve">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <button mat-button color="primary" (click)="approvedLeave(element.leaveId)">同意</button>
+          <button
+            style="color: #6ea77c"
+            mat-button
+            color="primary"
+            (click)="approvedLeave(element.leaveId)"
+          >
+            同意
+          </button>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="deny">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <button mat-button color="warn" (click)="disagreeLeave(element.leaveId)">不同意</button>
+          <button
+            style="color: #dd6565"
+            mat-button
+            color="warn"
+            (click)="disagreeLeave(element.leaveId)"
+          >
+            不同意
+          </button>
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns" class="header-row"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="data-row"></tr>
+      <tr
+        mat-header-row
+        *matHeaderRowDef="displayedColumns"
+        class="header-row"
+      ></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns;"
+        class="data-row"
+      ></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[20, 50, 100]"
-                  showFirstLastButtons
-                  aria-label="Select page of periodic elements">
+    <mat-paginator
+      [pageSizeOptions]="[10, 15, 20]"
+      showFirstLastButtons
+      aria-label="Select page of periodic elements"
+    >
     </mat-paginator>
   </div>
-}
+  }
+</div>
