--- a/src/app/@BackStage/opinion/opinion.html
+++ b/src/app/@BackStage/opinion/opinion.html
@@ -1,32 +1,49 @@
+<div class="table-group">
+  <h3 class="table-title">意見回饋</h3>
+  <div class="table-wrapper">
+    <table
+      mat-table
+      class="mat-elevation-z2 employee-table"
+      [dataSource]="dataSource"
+    >
+      <!-- 員工編號 -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>員工編號</th>
+        <td mat-cell *matCellDef="let e">{{ e.id }}</td>
+      </ng-container>
 
-<table mat-table class="mat-elevation-z2 employee-table" [dataSource]="dataSource">
+      <!-- 名字 -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>員工姓名</th>
+        <td mat-cell *matCellDef="let e">{{ e.name }}</td>
+      </ng-container>
 
-  <!-- 員工編號 -->
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>員工編號</th>
-    <td mat-cell *matCellDef="let e"> {{ e.id }} </td>
-  </ng-container>
+      <!-- 查看 -->
+      <ng-container matColumnDef="search">
+        <th mat-header-cell *matHeaderCellDef>內容分析</th>
+        <td mat-cell *matCellDef="let e">
+          <label class="button-search" (click)="showSearchOpinion(e.id)">
+            <div style="margin-left: 16px; display: inline-block">
+              <img
+                src="search.png"
+                style="width: 16px; height: 16px; display: inline-block"
+                alt=""
+              />
+            </div>
+          </label>
+        </td>
+      </ng-container>
 
-  <!-- 名字 -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>員工姓名</th>
-    <td mat-cell *matCellDef="let e">{{ e.name }}</td>
-  </ng-container>
+      <!-- 表頭與資料列 -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
 
-  <!-- 查看 -->
-  <ng-container matColumnDef="search">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let e"><label class="button-search" (click)="showSearchOpinion(e.id)">查看</label></td>
-  </ng-container>
-
-  <!-- 表頭與資料列 -->
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-</table>
-
-<mat-paginator [pageSizeOptions]="[20, 50, 100]"
-              showFirstLastButtons
-              aria-label="選擇每頁筆數">
-</mat-paginator>
-
+    <mat-paginator
+      [pageSizeOptions]="[8, 15, 30]"
+      showFirstLastButtons
+      aria-label="選擇每頁筆數"
+    >
+    </mat-paginator>
+  </div>
+</div>
