--- a/src/app/@BackStage/opinion/opinion.scss
+++ b/src/app/@BackStage/opinion/opinion.scss
@@ -1,4 +1,11 @@
-.button-search{
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box !important;
+}
+
+.button-search {
   color: blue;
   text-decoration: underline;
   cursor: pointer;
@@ -8,4 +15,83 @@
     color: #1e40af; // 深藍色，增加可點擊感
   }
 }
+.table-group {
+  .table-title {
+    background-color: #235347;
+    display: inline-block;
+    color: #fff;
+    padding: 12px 12px 8px 12px;
+    border-radius: 8px 8px 0 0;
+    margin: 0;
+    margin-left: 24px;
+    box-shadow: 12px 12px 12px 1px rgba(0, 0, 0, 0.2);
+  }
+  width: 800px;
+  margin: 0 auto;
+}
 
+.table-wrapper {
+  // padding: 8px;
+  // padding-top: 8px;
+  // padding-bottom: 8px;
+  padding: 8px;
+  // background-color: #8eb69b;
+  border-radius: 8px 8px 16px 16px;
+  position: relative;
+  overflow: hidden !important;
+  box-shadow: 12px 12px 12px 1px rgba(0, 0, 0, 0.2);
+  &::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    border: 8px solid #235347;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 4px 4px 16px 16px;
+    z-index: -1;
+  }
+}
+
+:host ::ng-deep .mdc-data-table__content {
+  z-index: 30 !important;
+}
+
+:host ::ng-deep .mat-mdc-paginator-container {
+  background-color: #235347 !important;
+  // border-radius: 0 0 16px 16px !important;
+  overflow: hidden !important;
+  z-index: 99;
+  // margin: 0 -8px 0;
+  width: 110%;
+  outline: #235347 8px solid;
+  background: #235347;
+  margin-top: 8px;
+  color: #fff !important;
+}
+
+:hose ::ng-deep .mat-mdc-table {
+  border-radius: 16px !important;
+  overflow: hidden !important;
+}
+
+:host ::ng-deep .mat-mdc-header-cell {
+  border-bottom-color: #8eb69b !important;
+}
+:host ::ng-deep .mat-mdc-cell {
+  border-bottom-color: #8eb69b !important;
+  color: #333;
+}
+
+:host ::ng-deep .mat-mdc-select {
+  color: #fff;
+}
+
+:host ::ng-deep .mat-mdc-paginator-icon .path {
+  color: #fff !important;
+  background-color: #fff !important;
+}
+
+:host ::ng-deep .mat-mdc-header-cell {
+  color: #235347;
+}
