--- a/src/app/@BackStage/salary/salary.component.scss
+++ b/src/app/@BackStage/salary/salary.component.scss
@@ -1,17 +1,23 @@
 /* 上方月份導覽列 */
+*,
+*::before,
+*::after {
+  box-sizing: border-box !important;
+}
+
 .header {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 12px;
   padding: 12px 0;
-  border-bottom: 1px solid #e0e0e0;
+  // border-bottom: 1px solid #e0e0e0;
   margin-bottom: 16px;
 
   .month-label {
     font-size: 1.2rem;
     font-weight: 600;
-    color: #333;
+    color: #fff;
     min-width: 120px;
     text-align: center;
   }
@@ -36,7 +42,7 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
-  padding-bottom: 8px;
+  // padding-bottom: 8px;
 
   .employee-table {
     width: 100%;
@@ -84,4 +90,67 @@
     text-decoration: underline;
     color: #0d47a1;
   }
+}
+.toolbar {
+  max-width: 280px;
+  margin: 0 auto;
+}
+.toolbar-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.toolbar-center {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+.toolbar-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-icon {
+  font-size: 26px;
+  color: #2f3e46 !important;
+  cursor: #9a5370;
+  display: inline-grid;
+  place-items: center;
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 8px;
+  transition: 0.3s;
+  cursor: pointer;
+  border: 2px solid #fff;
+
+  background-color: #7eb1a2c4;
+
+  box-shadow: 5px 5px 10px rgba(110, 110, 110, 0.295);
+}
+.nav-icon:hover {
+  transform: translateY(-3px);
+  background: rgba(232, 180, 200, 0.12);
+  color: #9a5370;
+  transition: 0.3s;
+}
+
+.month-label {
+  font-size: 18px;
+  font-weight: 600;
+  color: var(--indigo);
+  margin: 0 12px;
+  letter-spacing: 1px;
+  padding: 6px 12px;
+  border-radius: 999px;
+  background: #8eb69b;
+  color: #fff;
+  border: 1px solid rgba(47, 62, 70, 0.03);
+  box-shadow: 0 6px 14px rgba(47, 62, 70, 0.02);
+}
+
+.mat-mdc-paginator {
+  background-color: #8eb69bc6 !important;
 }
