--- a/src/app/@Dialog/@Clock/punch-in-late/punch-in-late.scss
+++ b/src/app/@Dialog/@Clock/punch-in-late/punch-in-late.scss
@@ -1,17 +1,35 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box !important;
+}
+
 .clock-form {
   max-width: 450px;
   margin: 20px auto;
-  padding: 20px;
+  // padding: 20px;
   background: #fff;
   border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   font-family: "Segoe UI", Arial, sans-serif;
+
+
+
+
+  height: 410px;
+}
+.wrapper {
+    overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #5d9c88 #f1f5f9;
+  padding: 12px 20px 12px;
+  border-top: 1px solid #ddd;
 }
 
 .clock-form h2 {
   text-align: center;
   margin-bottom: 20px;
-  color: #1976d2;
+  color: #235347;
 }
 
 .form-row {
@@ -21,10 +39,13 @@
   gap: 10px;
   margin-bottom: 15px;
 }
+.txt {
+  font-size: 14px !important;
+}
 
 .form-row label {
   font-weight: 500;
-  text-align: right;
+  text-align: left;
   color: #333;
 }
 
