--- a/src/app/@Dialog/@Clock/update-clock/update-clock.scss
+++ b/src/app/@Dialog/@Clock/update-clock/update-clock.scss
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box !important;
+}
+
 .clock-card {
   background: #ffffff;
   border-radius: 12px;
