--- a/src/app/@Dialog/@Leave/view-leave-info/view-leave-info.component.html
+++ b/src/app/@Dialog/@Leave/view-leave-info/view-leave-info.component.html
@@ -4,54 +4,68 @@
   <mat-icon class="nav-icon" (click)="nextMonth()">chevron_right</mat-icon>
 </div>
 
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource">
+<div class="table-container">
+  <div class="mat-elevation-z8 le">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>員工編號</th>
+        <td mat-cell *matCellDef="let element">{{ element.employeeId }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> 員工編號 </th>
-      <td mat-cell *matCellDef="let element"> {{element.employeeId}} </td>
-    </ng-container>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>員工姓名</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> 員工姓名 </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef>請假類型</th>
+        <td mat-cell *matCellDef="let element">{{ element.leaveType }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> 請假類型 </th>
-      <td mat-cell *matCellDef="let element"> {{element.leaveType}} </td>
-    </ng-container>
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef>請假事由</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.leaveDescription }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> 請假事由 </th>
-      <td mat-cell *matCellDef="let element"> {{element.leaveDescription}} </td>
-    </ng-container>
+      <ng-container matColumnDef="apply_date">
+        <th mat-header-cell *matHeaderCellDef>申請日期</th>
+        <td mat-cell *matCellDef="let element">
+          <label
+            class="applyDateBtn"
+            (click)="
+              showLeaveTime(
+                element.leaveId,
+                element.employeeId,
+                element.leaveProve
+              )
+            "
+            >查看</label
+          >
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="apply_date">
-      <th mat-header-cell *matHeaderCellDef> 申請日期 </th>
-      <td mat-cell *matCellDef="let element">
-        <label class="applyDateBtn" (click)="showLeaveTime(element.leaveId,element.leaveProve)">查看</label>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="approved">
-      <th mat-header-cell *matHeaderCellDef> 是否同意</th>
-      <td mat-cell *matCellDef="let element">
-        @if(element.approved){
+      <ng-container matColumnDef="approved">
+        <th mat-header-cell *matHeaderCellDef>是否同意</th>
+        <td mat-cell *matCellDef="let element">
+          @if(element.approved){
           <label class="approved-label">同意</label>
-        }@else{
+          }@else{
           <label class="denied-label">不同意</label>
-        }
-      </td>
-    </ng-container>
+          }
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons
-                 aria-label="Select page of periodic elements">
-  </mat-paginator>
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons
+      aria-label="Select page of periodic elements"
+    >
+    </mat-paginator>
+  </div>
 </div>
-
