--- a/src/app/@Dialog/@Shift/accept-shift/accept-shift.component.html
+++ b/src/app/@Dialog/@Shift/accept-shift/accept-shift.component.html
@@ -1,4 +1,3 @@
-
 <div class="toolbar">
   <div class="toolbar-left">
     <!-- 可預留空間放其他功能 -->
@@ -11,9 +10,18 @@
   </div>
 
   <div class="toolbar-right">
-    <button mat-raised-button color="primary" (click)="goBack()">返回</button>
+    <button
+      mat-raised-button
+      color="primary"
+      class="btn-bg-secondary"
+      (click)="goBack()"
+    >
+      返回
+    </button>
   </div>
 </div>
+<!-- ????? -->
+<div class="daypilot-scheduler-wrapper">
 
-
-<daypilot-scheduler [config]="config" [events]="events"></daypilot-scheduler>
+  <daypilot-scheduler [config]="config" [events]="events"></daypilot-scheduler>
+</div>
