--- a/src/app/@Dialog/@Shift/add-shift-work/add-shift-work.scss
+++ b/src/app/@Dialog/@Shift/add-shift-work/add-shift-work.scss
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box !important;
+}
+
 /* Dialog 容器 */
 .mat-dialog-container {
   border-radius: 16px !important;
@@ -9,10 +15,13 @@
 /* 標題 */
 .page-title {
   font-size: 1.6rem;
+  font-size: 22px;
   font-weight: 700;
   color: #2c3e50;
   text-align: center;
-  margin-bottom: 24px;
+  // margin-bottom: 24px;
+
+  color: #2c3e50;
 }
 
 /* 卡片容器 */
@@ -49,8 +58,9 @@
   padding: 8px 10px;
   border: 1px solid #d0d7de;
   border-radius: 8px;
-  font-size: 0.95rem;
+  font-size: 14px;
   transition: border-color 0.2s ease, box-shadow 0.2s ease;
+  height: 40px;
 }
 .form-group input:focus,
 .form-group select:focus {
@@ -75,6 +85,10 @@
   overflow-y: auto;
   border-radius: 8px;
   border: 1px solid #e1e4e8;
+  tr > th {
+    color: #235347;
+    background: #daf1de;
+  }
 }
 .preview-list table {
   width: 100%;
@@ -96,7 +110,7 @@
   background: #fafafa;
 }
 .preview-list tr:hover {
-  background: #f5faff;
+  background: #fefce7;
 }
 
 /* 按鈕區 */
@@ -139,7 +153,7 @@
 
 /* 小圓刪除按鈕 */
 .btn-circle {
-  background: #ff6b6b;
+  background: #e17272;
   border: none;
   color: #fff;
   font-size: 18px;
@@ -152,5 +166,5 @@
   transition: 0.25s;
 }
 .btn-circle:hover {
-  background: #e74c3c;
+  background: #e45e4f;
 }
