--- a/src/app/@Dialog/fail/fail.scss
+++ b/src/app/@Dialog/fail/fail.scss
@@ -1,3 +1,9 @@
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box !important;
+}
 .Error-container {
     display: flex;
     flex-direction: column;
